--- a/hr-payroll-api/src/main/resources/application.properties
+++ b/hr-payroll-api/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 server.port=8100
 spring.application.name=hr-payroll-api
+eureka.client.service-url.default-zone=${EUREKA_URL:http://localhost:8761/eureka}
