--- a/hr-user-api/src/main/resources/application.properties
+++ b/hr-user-api/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 server.port=${port:8000}
 spring.application.name=hr-user-api
+eureka.client.service-url.default-zone=${EUREKA_URL:http://localhost:8761/eureka}
